# einop_chad

./: README.md  pyproject.toml
einop/: __init__.py  extended.py
