[tool.poetry]
name = "einop_chad"
version = "0.0.1"
description = ""
authors = ["Giulio Zani <giulio.zani@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/salamanderxing/einop_chad"
homepage = "https://github.com/salamanderxing/einop_chad"

[tool.poetry.dependencies]
python = "^3.9"
einops = ">=0.4.0"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
numpy = "^1.20.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
typer = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
